# Corner_Detection_Project

./: .gitignore  CMakeLists.txt  main.cpp
src/: ShiTomasi.cpp  ShiTomasi.h  Susan.cpp  Susan.h  image_manipulation.cpp  image_manipulation.h  testing.cpp  testing.h
